Intial outline created. Background picture chosen. Basic CSS created.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +9,18 @@
     <link rel="stylesheet" href="style.css">
     <title>Never Not Amanda</title>
 </head>
+
 <body>
-    
+    <section class="main">
+        <div class="picture">
+            <div id="title">
+                <div id="space">hello</div>
+                <h1>Never Not Amanda</h1>
+                <h2>Artwork and Illustrations by Amanda Wood</h2>
+                <h3>Find Out More</h3>
+            </div>
+        </div>
+    </section>
 </body>
+
 </html>
