Added menu bar.

--- a/index.html
+++ b/index.html
@@ -11,13 +11,29 @@
 </head>
 
 <body>
+<section class="menu">
+    <ul>
+        <li>
+            <a href="#">Home</a>
+        </li>
+        <li> 
+            <a href="#">About</a> 
+        </li>
+        <li>
+            <a href="#">Portfolio</a>
+        </li>
+        <li>
+            <a href="#">Contact</a>
+        </li>
+    </ul>
+</section>
+
     <section class="main">
         <div class="picture">
             <div id="title">
-                <div id="space">hello</div>
                 <h1>Never Not Amanda</h1>
                 <h2>Artwork and Illustrations by Amanda Wood</h2>
-                <h3>Find Out More</h3>
+                <a href="#">Find Out More</a>
             </div>
         </div>
     </section>
