Finished initial layout. Added dark mode.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 <body>
 <section class="menu">
     <ul>
+        <li id="sneer">
+            <a href="https://sneercampaign.com/">The Ongoing Project: Sneer Campaign</a>
+        </li>
         <li>
             <a href="#">Home</a>
         </li>
