--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     <section class="main">
         <div class="picture">
             <div id="title">
-                <h1>Never Not Amanda</h1>
-                <h2>Artwork and Illustrations by Amanda Wood</h2>
+                <h1><span>Never</span> <span>Not</span> <span>Amanda</span></h1>
+                <h2><span>Artwork and Illustrations</span> <span>by Amanda Wood</span></h2>
                 <a href="#">Find Out More</a>
             </div>
         </div>
