--- a/index.html
+++ b/index.html
@@ -6,30 +6,44 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Artist page for Never Not Amanda.">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
     <title>Never Not Amanda</title>
 </head>
 
 <body>
-<section class="menu">
-    <ul>
-        <li id="sneer">
-            <a href="https://sneercampaign.com/">The Ongoing Project: Sneer Campaign</a>
-        </li>
-        <li>
+    <div class="mobileNav">
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <i class="fa fa-bars"></i>
+        </a>
+        <div id="mobileLinks">
+            <a href="https://sneercampaign.com/">Sneer Campaign</a>
             <a href="#">Home</a>
-        </li>
-        <li> 
-            <a href="#">About</a> 
-        </li>
-        <li>
+            <a href="#">About</a>
             <a href="#">Portfolio</a>
-        </li>
-        <li>
             <a href="#">Contact</a>
-        </li>
-    </ul>
-</section>
+        </div>
+    </div>
+
+    <section class="menu">
+        <ul id="menuLinks">
+            <li id="sneer">
+                <a href="https://sneercampaign.com/">The Ongoing Project: Sneer Campaign</a>
+            </li>
+            <li>
+                <a href="#">Home</a>
+            </li>
+            <li>
+                <a href="#">About</a>
+            </li>
+            <li>
+                <a href="#">Portfolio</a>
+            </li>
+            <li>
+                <a href="#">Contact</a>
+            </li>
+        </ul>
+    </section>
 
     <section class="main">
         <div class="picture">
