Set the styling for the header and showcase section.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <section class="menu">
         <ul id="menuLinks">
             <li id="sneer">
-                <a href="https://sneercampaign.com/">The Ongoing Project: Sneer Campaign</a>
+                <a href="https://sneercampaign.com/">Sneer Campaign</a>
             </li>
             <li>
                 <a href="#">Home</a>
