Initial final version compeleted.

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </div>
         <div id="title">
             <h1><span>Never</span> <span>Not</span> <span>Amanda</span></h1>
-            <h2><span>Artwork</span>  <span>Illustrations</span> <span>by Amanda Wood</span></h2>
+            <h2><span>Artwork</span> <span id="small">and</span> <span>Illustrations</span> <span id="smaller">by</span> <span>Amanda Wood</span></h2>
             <a href="#" id="main-button">Find Out More</a>
         </div>
     </section>
