Added og and twitter meta tags.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Artist page for Never Not Amanda.">
+    <meta name="description" content="Art and Illustrations by Amanda Wood">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://jamflynt.github.io/LandingPage/">
+    <meta property="og:title" content="Never Not Amanda">
+    <meta property="og:description" content="Art and Illustrations by Amanda Wood">
+    <meta property="og:image" content="Pictures/businessCards/mediumBizCard.png">
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://jamflynt.github.io/LandingPage/">
+    <meta property="twitter:title" content="Never Not Amanda">
+    <meta property="twitter:description" content="Art and Illustrations by Amanda Wood">
+    <meta property="twitter:image" content="Pictures/businessCards/mediumBizCard.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
     <title>Never Not Amanda</title>
@@ -62,7 +72,9 @@
         </div>
         <div id="title">
             <h1><span>Never</span> <span>Not</span> <span>Amanda</span></h1>
-            <h2><span>Artwork</span> <span id="small">and</span> <span>Illustrations</span> <span id="smaller">by</span> <span>Amanda Wood</span></h2>
+            <h2><span>Artwork</span> <span id="small">and</span> <span>Illustrations</span> <span id="smaller">by</span>
+                <span>Amanda Wood</span>
+            </h2>
             <a href="#" id="main-button">Find Out More</a>
         </div>
     </section>
@@ -72,12 +84,13 @@
 
 <script>
     function myFunction() {
-  var x = document.getElementById("menuLinks");
-  if (x.style.display === "block") {
-    x.style.display = "none";
-  } else {
-    x.style.display = "block";
-  }
-}
+        var x = document.getElementById("menuLinks");
+        if (x.style.display === "block") {
+            x.style.display = "none";
+        } else {
+            x.style.display = "block";
+        }
+    }
 </script>
+
 </html>
