--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <meta property="og:url" content="https://jamflynt.github.io/LandingPage/">
     <meta property="og:title" content="Never Not Amanda">
     <meta property="og:description" content="Art and Illustrations by Amanda Wood">
-    <meta property="og:image" content="Pictures/businessCards/mediumBizCard.png">
+    <meta property="og:image:src" content="Pictures/businessCards/mediumBizCard.png">
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://jamflynt.github.io/LandingPage/">
     <meta property="twitter:title" content="Never Not Amanda">
     <meta property="twitter:description" content="Art and Illustrations by Amanda Wood">
-    <meta property="twitter:image" content="Pictures/businessCards/mediumBizCard.png">
+    <meta property="twitter:image:src" content="Pictures/businessCards/mediumBizCard.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
     <title>Never Not Amanda</title>
