--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
     </section>
 
     <p class="copyright">Floating Hat Web Design &copy; 2021 </p>
+    <img src="Pictures/businessCards/mediumBizCard.png" alt="mediumBizCard">
 </body>
 
 <script>
