--- a/index.html
+++ b/index.html
@@ -80,7 +80,9 @@
     </section>
 
     <p class="copyright">Floating Hat Web Design &copy; 2021 </p>
-    <img src="Pictures/businessCards/mediumBizCard.png" alt="mediumBizCard">
+    <div>
+        <img src="Pictures/businessCards/mediumBizCard.png" alt="mediumBizCard">
+    </div>
 </body>
 
 <script>
